--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -34,7 +34,7 @@
             <div class="wui-i-description xa-description cl">
                 <div class="wui-i-description-content">
                     <div class="wui-i-product-title">{{component.model.title}}</div>
-                    <div class="wui-i-product-price-group">
+                    <div class="wui-i-product-price-group none">
                         <span class="wui-i-product-price-group-title">团购价</span>
                         <span class="wui-i-product-price-group-original-price">240元</span>
                         <span class="wui-i-product-price-group-group-price">140元</span>
