--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -95,6 +95,10 @@
 		.xui-num{
 			width: 255px;
 		}
+		.xui-exchangeStock{
+			display: inline-block;
+			width: 60px;
+		}
 	</style>
 {% endblock %}
 {% block content-panel %}
@@ -133,14 +137,14 @@
 	        	</th>
 	        	<td>
 	        	    <form>
-		        		<div class="xui-i-exchange xa-i-exchange">
+		        		<div class="xui-i-exchange xa-exchange">
 		        		    {% for item in card_exchange_dic.prize%}
 		        		    <div class="xui-i-put">
 			        		    <div>
 			        		    	使用积分：<input type="text" class="xa-integral xui-i-integral xui-hide" name="integral" readonly=true value="{{item.integral}}">
 			        		    	<span class="xa-exchangeSpan">{{item.integral}}</span>
 			        		    </div>
-			                    <div class="pr">
+			                    <div>
 			                    	<div class="xui-money">
 				                    	兑换微众卡：<input type="text" class="xui-i-money xa-money xui-hide" name="money" readonly=true value="{{item.money}}">
 				                    	<span class="xa-exchangeSpan">{{item.money}}</span>
@@ -153,7 +157,7 @@
 						                <input type="text" class="xui-i-num xa-endnum xui-hide" name="endnum" readonly=true value="{{item.end_num}}">	
 					                	<span class="xa-exchangeSpan">{{item.end_num}}</span>
 					                </div>	
-					                <span class="xa-exchangeStock">库存：{{item.count}}</span>
+					                <span class="xa-exchangeStock xui-exchangeStock">库存：{{item.count}}</span>
                                     <a href="javascript:void(0);" class="xui-i-del xui-hide" title="删除">&times;</a>
 			                    </div>
 			                </div>
@@ -194,13 +198,13 @@
 	        	</th>
 	        	<td>
 	        	    <form>
-		        		<div class="xui-i-exchange xa-i-exchange">
+		        		<div class="xui-i-exchange xa-exchange">
 		        		    <div class="xui-i-put">
 			        		    <div>
 			        		    	使用积分：<input type="text" class="xa-integral xui-i-integral" name="integral">
 			        		    	<span class="xa-exchangeSpan"></span>
 			        		    </div>
-			                    <div class="pr">
+			                    <div>
 			                        <div class="xui-money">
 				                    	兑换微众卡：<input type="text" class="xui-i-money xa-money" name="money">
 				                    	<span class="xa-exchangeSpan"></span>
@@ -213,7 +217,7 @@
 						                <input type="text" class="xui-i-num xa-endnum" name="endnum">	
 						                <span class="xa-exchangeSpan"></span>
 						            </div>
-					                <span class="xa-exchangeStock">库存：</span>
+					                <span class="xa-exchangeStock xui-exchangeStock">库存：</span>
 					                <a href="javascript:void(0);" class="xui-i-del" title="删除">&times;</a>              
 			                    </div>
 			                </div>
@@ -258,7 +262,7 @@
 			<input type="text" class="xui-i-num xa-endnum" name="endnum">	
 			<span class="xa-exchangeSpan"></span> 
 		</div>  
-		<span class="xa-exchangeStock">库存：</span>
+		<span class="xa-exchangeStock xui-exchangeStock">库存：</span>
 		<a href="javascript:void(0);" class="xui-i-del" title="删除">&times;</a>            
 	</div>
 </div>
@@ -278,7 +282,7 @@ $(document).ready(function() {
     
     //添加新卡
 	$(".xa-add").click(function(){   
-		$("#exchange-input").tmpl().appendTo(".xa-i-exchange");
+		$("#exchange-input").tmpl().appendTo(".xa-exchange");
 	});  
     //控制删除按钮
 	$(".xui-i-del").eq(0).hide();
