--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -63,8 +63,16 @@
         top: -40px;
         right: 15px;
         color: #484848;
-        border-bottom: #484848 solid 1px;
         font-size: 0.9rem;
+    }
+    .wui-swiper-slide .xui-i-content-group .xui-i-content-type p{
+        border-bottom: #484848 solid 1px;
+        margin-bottom: 5px;
+        text-align: right;
+        background: no-repeat scroll 0 0 url("/termite_static/img/component/group/group_price_icon.png");
+        background-position: 2px 0px;
+        padding-left: 20px;
+        background-size: 15%;
     }
     .wui-swiper-slide .xui-listInner .xui-i-title{
         text-align: left;
