--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -64,7 +64,7 @@
 	}
 	.xui-exchange-form .xui-form-control .xui-bg .xui-exchange-tel{
 		display: block;
-		height: 30px;
+		height: 100%;
 		width: 90%;
 		line-height: 30px;
 		border: 1px solid #e5e5e5;
@@ -74,8 +74,8 @@
 	}
 	.xui-exchange-form .xui-form-control .xui-bg .xui-btnCode{
 		position: absolute;
-		right: 30px;
-		top: 18px;
+		right: 45px;
+		top: 20px;
 		width: 100px;
 		height: 40px;
 		border-radius: 4px;
@@ -173,7 +173,6 @@
 	}
 	input.ui-input-text, textarea.ui-input-text {
 		width: 90%;
-		margin:5px auto;
 		font-size: 1rem;
 		display: block;
 		outline: none;
@@ -275,17 +274,17 @@
 			<p>现有积分：<span class="xa-current-integral">1000</span></p>
 		</div>
 		<form action="post" class="xui-exchange-form">
-			<div class="xui-form-control xui-page">
+			<div class="xui-form-control">
 				<label for="phone"><b></b>输入手机号：</label>
 				<div class="xui-bg">
-					<!--{% if card_exchange_rule.is_bind %}-->
-					<!--<input type="tel" value="1354567678" disabled/>-->
-					<!--{% else %}-->
-					<!--<input class="xui-exchange-tel xa-phoneNum" type="tel" id="phone"/>-->
-					<!--<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>-->
-					<!--{% endif%}-->
+					{% if card_exchange_rule.is_bind %}
+					<input type="tel" value="1354567678" disabled/>
+					{% else %}
 					<input class="xui-exchange-tel xa-phoneNum" type="tel" id="phone"/>
 					<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>
+					{% endif%}
+					<!--<input class="xui-exchange-tel xa-phoneNum" type="tel" id="phone"/>-->
+					<!--<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>-->
 					<p class="xui-help-block">绑定手机号才能把奖励发到你的帐户里哦～</p>
 				</div>
 			</div>
@@ -344,7 +343,7 @@
 		function validate_phone(phone_number){
 			var reg = /^1[3|4|5|8]\d{9}$/;
 			if(!reg.test(phone_number) || phone_number.length != 11){
-				$('.xui-page').alert({
+				$('body').alert({
 					isShow: true,
 					info: "请填写有效的手机号",
 					isSlide: true,
@@ -376,7 +375,7 @@
 					error: function(data){
 						console.log(data)
 						if (data.data && data.data.msg){
-							$('.xui-page').alert({
+							$('body').alert({
 								isShow: true,
 								info: data.data.msg,
 								isSlide: true,
@@ -408,7 +407,7 @@
 						code:code
 					}),
 					success: function(data) {
-						$('.xui-page').alert({
+						$('body').alert({
 							isShow: true,
 							info: '绑定成功',
 							isSlide: true,
@@ -417,7 +416,7 @@
 //						$('.xa-alert-getCode').addClass('hidden');
 					},
 					error: function(data){
-						$('.xui-page').alert({
+						$('body').alert({
 							isShow: true,
 							info: data.data.msg,
 							isSlide: true,
@@ -431,14 +430,14 @@
 			$('.xa-alert-getCode').addClass('hidden');
 		});
 		$('.xa-exchange-choose').click(function(){
-			if($('.xa-exchange-mask').is(':hidden')){
+			if($('.xa-exchange-choose').find('.xa-exchange-mask').length>0){
+				$('.xa-exchange-choose').removeClass('active')
+			}else{
 				if(!$('.xa-exchange-choose').hasClass('active')){
 					$('.xa-exchange-choose').addClass('active').siblings().removeClass('active')
 				}else{
 					$('.xa-exchange-choose').removeClass('active')
 				}
-			}else{
-				$('.xa-exchange-choose').removeClass('active')
 			}
 		});
 		$(".xa-exchange-submit").click(function(){
@@ -461,7 +460,7 @@
 						$('.xa-alert-exchange').removeClass('hidden');
 					},
 					error: function(data){
-						$('.xui-page').alert({
+						$('body').alert({
 							isShow: true,
 							info: data.data.msg,
 							isSlide: true,
