--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
@@ -145,7 +145,7 @@
 						<span class="xui-numTips xui-password xa-password">{{weizoom_card.password}}</span>
 						<a href="javascript:void(0)" class="xui-hidden xa-hidden">隐藏</a>
 					</div>
-					<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" class="xui-exit" >退出登陆</a>
+					<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_quit=1" class="xui-exit" >退出登陆</a>
 				</div>
 				<div class="xui-fr">
 					<span class="xui-textTips">余额</span>
