--- a/weapp/mall/templates/mall/editor/create_orders_to_money.html
+++ b/weapp/mall/templates/mall/editor/create_orders_to_money.html
@@ -14,19 +14,36 @@
 {% block js %}
 <script>
 	var cost_id = "{{ cost_id }}";
-	console.log(cost_id,"dddddddd");
-	if (cost_id !==""){
+	var cost_status = "{{ cost_status }}";
+	var is_weapp = "{{ is_weapp }}";
+	if (cost_id != "" && cost_status == ""){
 		W.getApi().call({
-		app: 'mall2',
-		resource: 're_submit_list',
-		method: 'get',
-		args: {cost_id: cost_id},
-		success: function(resp) {
-			$('#orderPage').html(resp.data.html);
-		},
-		error: function(resp) {
-		}
-	});
+			app: 'mall2',
+			resource: 're_submit_list',
+			method: 'get',
+			args: {cost_id: cost_id},
+			success: function(resp) {
+				$('#orderPage').html(resp.data.html);
+			},
+			error: function(resp) {
+			}
+		});
+	}else if(cost_status != ""){
+		W.getApi().call({
+			app: 'mall2',
+			resource: 'cost_view_list',
+			method: 'get',
+			args: {
+				cost_id: cost_id,
+				cost_status: cost_status,
+				is_weapp: is_weapp
+			},
+			success: function(resp) {
+				$('#orderPage').html(resp.data.html);
+			},
+			error: function(resp) {
+			}
+		});
 	}else{
 		W.getApi().call({
 		app: 'mall2',
