--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -65,6 +65,9 @@
 			margin-right: 12px;
 			cursor: pointer;
 		}
+		.xui-detail:hover{
+			text-decoration: none;
+		}
 		.xui-i-del{
 			margin-left: 20px;
 			background: #207cbe;
