--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
@@ -127,7 +127,7 @@
 		color: #999;
 	}
 	.xui-use-detail table tr>td.xui-order-info-name{
-		text-align: left;
+		text-align: center;
 		padding-left: 15px;
 	}
 	.xui-order-info-money{
