--- a/weapp/static_v2/js/view/mall_product_custom_model_editor/template.html
+++ b/weapp/static_v2/js/view/mall_product_custom_model_editor/template.html
@@ -3,7 +3,7 @@
 	${title}
 	<div style="position: absolute; bottom: 5px; right: 10px; line-height: 20px;" class="checkbox">
 		<label style="width:100px;">
-			<input type="checkbox" name="is_use_custom_model" class="xa-useCustomModel" value="true" {{if isUseCustomModel}}checked="checked"{{/if}}/> 使用定制规格
+			<input type="checkbox" name="is_use_custom_model" class="xa-useCustomModel" value="true" {{if isUseCustomModel}}checked="checked"{{/if}}{{if isGroupBuying}} disabled{{/if}}/> 使用定制规格
 		</label>
 	</div>
 </legend>
